# TestLiteStarAPI

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/api/user/: __init__.py  controllers.py  schemas.py
app/core/: __init__.py  dependencies.py  exceptions.py
app/domain/interfaces/: __init__.py  repositories.py
app/domain/models/: __init__.py  base.py  user.py
app/infrastructure/database/: __init__.py  config.py  dependencies.py  session.py  uow.py
app/infrastructure/repositories/: __init__.py  user.py
app/services/: __init__.py  user.py
